--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,19 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'com.mpatric:mp3agic:0.9.1'
+    implementation 'net.compartmental.code:minim:2.2.2'
 }
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'Game'
+        )
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
+apply plugin: 'idea'
